--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 /* @import 'node_modules/modern-normalize/modern-normalize.css'; */
 
 body {
-  background-color: #000;
-  background-image: url('./assets/background.png');
+  background-color: #fff;
+  /* background-image: url('./assets/background.png'); */
   background-size: auto 100%;
   background-position: center center;
   background-repeat: no-repeat;
