--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,15 @@
-/* @import 'node_modules/modern-normalize/modern-normalize.css'; */
+@import '../node_modules/modern-normalize/modern-normalize.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&display=swap');
 
 body {
-  background-color: #fff;
-  /* background-image: url('./assets/background.png'); */
-  background-size: auto 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #111111;
-  width: 100%;
-  height: 100vh;
   margin: 0;
+  min-height: 100vh;
+  font-family: 'Manrope', sans-serif;
+  color: #121417;
+  background-color: #FFFFFF;
 }
+
 h1,
 h2,
 h3,
@@ -21,19 +17,27 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-}
-a {
-  text-decoration: none;
-}
-ul {
-  list-style: none;
-  padding: 0;
   margin: 0;
 }
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
+
 button {
+  display: inline-block;
   cursor: pointer;
 }
